@@ -33,13 +33,13 @@ public class AdminDeathsResetCommand extends CompositeCommand {
             return false;
         }
 
-        UUID targetUUID = Util.getUUID(args.get(0));
+        UUID targetUUID = Util.getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         } else {
             getPlayers().setDeaths(getWorld(), targetUUID, 0);
-            user.sendMessage("commands.admin.deaths.reset.success", TextVariables.NAME, args.get(0));
+            user.sendMessage("commands.admin.deaths.reset.success", TextVariables.NAME, args.getFirst());
             return true;
         }
     }
