@@ -16,9 +16,27 @@ import world.bentobox.bentobox.panels.customizable.IslandCreationPanel;
 import world.bentobox.bentobox.util.Util;
 
 /**
- * /island create - Create an island.
+ * Handles the island creation command (/island create).
+ * <p>
+ * Features:
+ * <ul>
+ *   <li>Blueprint-based island creation</li>
+ *   <li>Multiple island support with permission-based limits</li>
+ *   <li>Blueprint bundle selection via GUI panel</li>
+ *   <li>Usage tracking for limited-use blueprints</li>
+ *   <li>Team member restrictions</li>
+ *   <li>World island limits</li>
+ * </ul>
+ * <p>
+ * Permission nodes:
+ * <ul>
+ *   <li>{@code island.create} - Base permission</li>
+ *   <li>{@code [gamemode].island.number.[number]} - Max concurrent islands</li>
+ *   <li>{@code [gamemode].island.create.[blueprintname]} - Blueprint-specific permission</li>
+ * </ul>
  *
  * @author tastybento
+ * @since 1.0
  */
 public class IslandCreateCommand extends CompositeCommand {
 
@@ -39,6 +57,17 @@ public class IslandCreateCommand extends CompositeCommand {
         setDescription("commands.island.create.description");
     }
 
+    /**
+     * Checks if the command can be executed by this user.
+     * <p>
+     * Validation checks:
+     * <ul>
+     *   <li>Reserved island status</li>
+     *   <li>Team member restrictions</li>
+     *   <li>Concurrent island limits</li>
+     *   <li>World island limits</li>
+     * </ul>
+     */
     @Override
     public boolean canExecute(User user, String label, List<String> args) {
         // Check if the island is reserved
@@ -77,18 +106,32 @@ public class IslandCreateCommand extends CompositeCommand {
         return true;
     }
 
+    /**
+     * Handles the island creation process.
+     * <p>
+     * Flow:
+     * <ul>
+     *   <li>With args: Creates island with specified blueprint (if valid and permitted)</li>
+     *   <li>Without args:
+     *     <ul>
+     *       <li>Shows blueprint selection panel if multiple bundles available</li>
+     *       <li>Creates island with default blueprint if only one available</li>
+     *     </ul>
+     *   </li>
+     * </ul>
+     */
     @Override
     public boolean execute(User user, String label, List<String> args) {
         // Permission check if the name is not the default one
         if (!args.isEmpty()) {
-            String name = getPlugin().getBlueprintsManager().validate(getAddon(), Util.sanitizeInput(args.get(0)));
+            String name = getPlugin().getBlueprintsManager().validate(getAddon(), Util.sanitizeInput(args.getFirst()));
             if (name == null) {
                 // The blueprint name is not valid.
                 user.sendMessage("commands.island.create.unknown-blueprint");
                 return false;
             }
             // Check perm
-            if (!getPlugin().getBlueprintsManager().checkPerm(getAddon(), user, Util.sanitizeInput(args.get(0)))) {
+            if (!getPlugin().getBlueprintsManager().checkPerm(getAddon(), user, Util.sanitizeInput(args.getFirst()))) {
                 return false;
             }
             // Check maximum uses
@@ -112,6 +155,13 @@ public class IslandCreateCommand extends CompositeCommand {
         }
     }
 
+    /**
+     * Checks if a user has reached the maximum uses for a blueprint bundle.
+     * 
+     * @param user The user to check
+     * @param name The blueprint bundle name
+     * @return true if max uses reached, false otherwise
+     */
     private boolean checkMaxUses(User user, String name) {
         if (getPlugin().getBlueprintsManager().getBlueprintBundles(getAddon()).containsKey(name)) {
             int maxTimes = getPlugin().getBlueprintsManager().getBlueprintBundles(getAddon()).get(name).getTimes();
@@ -124,12 +174,28 @@ public class IslandCreateCommand extends CompositeCommand {
         return false;
     }
 
+    /**
+     * Counts how many times a user has used a specific blueprint bundle.
+     * Checks island metadata for the "bundle" key matching the given name.
+     * 
+     * @param user The user to check
+     * @param name The blueprint bundle name
+     * @return Number of times the bundle has been used
+     */
     private long getBundleUses(User user, String name) {
         return getIslands().getIslands(getWorld(), user).stream()
                 .filter(is -> is.getMetaData("bundle").map(mdv -> name.equalsIgnoreCase(mdv.asString())).orElse(false))
                 .count();
     }
 
+    /**
+     * Creates a new island for the user using the specified blueprint.
+     * Also handles reset cooldown if configured.
+     * 
+     * @param user The user getting the new island
+     * @param name The blueprint bundle name to use
+     * @return true if island creation was successful
+     */
     private boolean makeIsland(User user, String name) {
         user.sendMessage("commands.island.create.creating-island");
         try {
