@@ -16,14 +16,32 @@ import world.bentobox.bentobox.managers.RanksManager;
 import world.bentobox.bentobox.util.Util;
 
 /**
- * Command to coop another player
- * 
- * @author tastybento
+ * Handles the island team coop command (/island team coop).
+ * <p>
+ * This command allows island members to grant temporary cooperative access
+ * to other players. Coop members have limited permissions on the island
+ * but are not full team members.
+ * <p>
+ * Features:
+ * <ul>
+ *   <li>Configurable rank requirement</li>
+ *   <li>Cooldown system</li>
+ *   <li>Optional invite confirmation</li>
+ *   <li>Maximum coop member limit</li>
+ *   <li>Tab completion for online players</li>
+ * </ul>
+ * <p>
+ * Permission: {@code island.team.coop}
  *
+ * @author tastybento
+ * @since 1.0
  */
 public class IslandTeamCoopCommand extends CompositeCommand {
 
+    /** Reference to parent team command for invite handling */
     private final IslandTeamCommand itc;
+    
+    /** Cached UUID of target player to coop */
     private @Nullable UUID targetUUID;
 
     public IslandTeamCoopCommand(IslandTeamCommand parentCommand) {
@@ -40,6 +58,21 @@ public class IslandTeamCoopCommand extends CompositeCommand {
         setConfigurableRankCommand();
     }
 
+    /**
+     * Validates coop command execution conditions.
+     * <p>
+     * Checks:
+     * <ul>
+     *   <li>Correct argument count</li>
+     *   <li>Player has an island</li>
+     *   <li>Player has sufficient rank</li>
+     *   <li>Target player exists</li>
+     *   <li>Cooldown expired</li>
+     *   <li>Not trying to coop self</li>
+     *   <li>Target not already cooped</li>
+     *   <li>No pending invite exists</li>
+     * </ul>
+     */
     @Override
     public boolean canExecute(User user, String label, List<String> args) {
         if (args.size() != 1) {
@@ -62,9 +95,9 @@ public class IslandTeamCoopCommand extends CompositeCommand {
             return false;
         }
         // Get target player
-        targetUUID = getPlayers().getUUID(args.get(0));
+        targetUUID = getPlayers().getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         // Check cooldown
@@ -90,8 +123,18 @@ public class IslandTeamCoopCommand extends CompositeCommand {
         return true;
     }
 
+    /**
+     * Handles the coop process based on settings.
+     * <p>
+     * Two possible flows:
+     * <ul>
+     *   <li>With confirmation: Sends invite that must be accepted</li>
+     *   <li>Without confirmation: Immediately grants coop rank if space available</li>
+     * </ul>
+     */
     @Override
     public boolean execute(User user, String label, List<String> args) {
+        assert targetUUID != null;
         User target = User.getInstance(targetUUID);
         Island island = getIslands().getIsland(getWorld(), user.getUniqueId());
         if (island != null) {
@@ -127,9 +170,13 @@ public class IslandTeamCoopCommand extends CompositeCommand {
         }
     }
 
+    /**
+     * Provides tab completion for online player names.
+     * Requires at least one character to avoid showing all players.
+     */
     @Override
     public Optional<List<String>> tabComplete(User user, String alias, List<String> args) {
-        String lastArg = !args.isEmpty() ? args.get(args.size() - 1) : "";
+        String lastArg = !args.isEmpty() ? args.getLast() : "";
         if (lastArg.isEmpty()) {
             // Don't show every player on the server. Require at least the first letter
             return Optional.empty();
